2012-09-28  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Sam Solomon added various signals for email and
	password related changes.

2012-09-08  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Usernames may now contain @, +, . and - characters.

2012-09-03  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.8.1 released.

	* Python 2.6.2 compatibility issue, fixed.

	* The example project was unintentionally packaged, fixed.

2012-09-01  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.8.0 released.

2012-08-29  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Dropped dependency on the emailconfirmation app,
	integrating its functionality into the account app. This change is
	of major impact, please refer to the documentation on how to
	upgrade.

2012-08-28  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Documented ACCOUNT_USERNAME_REQUIRED. This is actually
	not a new setting, but it somehow got overlooked in the
	documentation.

2012-08-24  Raymond Penners  <raymond.penners@intenct.nl>

	* account/socialaccount: Dropped the _tags postfix from the
	template tag libraries. Simply use {% load account %} and {% load
	socialaccount %}.

2012-08-21  Raymond Penners  <raymond.penners@intenct.nl>

	* Added signup and social login signals.

2012-08-17  Raymond Penners  <raymond.penners@intenct.nl>

	* SoundCloud: Rabi Alam contributed a SoundCloud provider, thanks!

2012-08-16  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Sam Solomon cleaned up the e-mail management view:
	added proper redirect after POSTs, prevent deletion of primary
	e-mail. Thanks.

2012-08-04  Raymond Penners  <raymond.penners@intenct.nl>

	* account: When signing up, instead of generating a completely
	random username a more sensible username is automatically derived
	from first/last name or e-mail.

2012-07-18  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.7.0 released.
